force-app/main/default/objects/pse__Assignment__c/fields/CT_PM_User_Record__c.field-meta.xml
<CustomField>
    <fullName>CT_PM_User_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM User Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>