force-app/main/default/objects/pse__Assignment__c/fields/CT_Self_Assignment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>CT_Self_Assignment_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This milestone doesn&apos;t exist on this project</errorMessage>
        <filterItems>
            <field>pse__Milestone__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Assignments (Milestone)</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>