force-app/main/default/objects/pse__Assignment__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__r.Id</formula>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>