force-app/main/default/objects/pse__Assignment__c/fields/pse__Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student - Placement</fullName>
            </value>
            <value>
                <fullName>Student - Interns</fullName>
            </value>
            <value>
                <fullName>Y1 Trainee - SL</fullName>
            </value>
            <value>
                <fullName>Y2 Trainne - SL</fullName>
            </value>
            <value>
                <fullName>Y3 Trainee - SL</fullName>
            </value>
            <value>
                <fullName>Y4 Trainee - SL</fullName>
            </value>
            <value>
                <fullName>Y1 Trainee - Grad</fullName>
            </value>
            <value>
                <fullName>Y2 Trainee - Grad</fullName>
            </value>
            <value>
                <fullName>Y3 Trainee - Grad</fullName>
            </value>
            <value>
                <fullName>AM1</fullName>
            </value>
            <value>
                <fullName>AM2</fullName>
            </value>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Associate partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>